<resources>
    <!--<string name="app_name">CSC4320 Project2</string> !-->
    <string name="app_name">SF Music Player</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--<string name="nav_header_title">Android Studio</string> !-->
    <string name="nav_header_title">Ulysses Carlos</string>
    <!-- <string name="nav_header_subtitle">android.studio@android.com</string> !-->
    <string name="nav_header_subtitle">ucarlos1@student.gsu.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Audio Player</string>
    <string name="menu_gallery">Search Database</string>
    <string name="menu_slideshow">Browse Filesystem</string>
    <string name="default_audio_file">default_audio_file.ogg</string>
    <string name="audio_play">Play</string>
    <string name="audio_pause">Pause</string>
    <string name="audio_next">Next</string>
    <string name="audio_prev">Prev</string>
    <string name="default_audio_duration">00:00/00:00</string>
    <string name="default_audio_track">No Audio is Playing.</string>
    <string name="default_album_art">This is the default album art.</string>
    <string name="default_filesystem_item_title">Dummy FS Item!</string>
    <string name="default_filesystem_item_size">[UNKNOWN SIZE]</string>
    <string name="default_database_name">Dummy Track</string>
    <string name="default_data_track_length">99:99</string>
</resources>